scripts/nullaway/original/url054c08669f_jules2689_CSI4124_tgz-pJ8-SMThemeParkExperi3J8.txt
../original/url054c08669f_jules2689_CSI4124_tgz-pJ8-SMThemeParkExperi3J8/src/simModel/SMThemePark.java:48: error: [NullAway] initializer method does not guarantee @NonNull field rcgTrains (line 27) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public SMThemePark(double t0time, double tftime, int nTrains, int nCars,
	       ^
    (see http://t.uber.com/nullaway )
../original/url054c08669f_jules2689_CSI4124_tgz-pJ8-SMThemeParkExperi3J8/src/simModel/SMThemePark.java:98: error: [NullAway] initializer method does not guarantee @NonNull fields rcgTrains (line 27), rvp (line 33) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public SMThemePark() {
	       ^
    (see http://t.uber.com/nullaway )
../original/url054c08669f_jules2689_CSI4124_tgz-pJ8-SMThemeParkExperi3J8/src/simModel/Tracks.java:18: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/url054c08669f_jules2689_CSI4124_tgz-pJ8-SMThemeParkExperi3J8/src/simModel/Trains.java:14: error: [NullAway] initializer method does not guarantee @NonNull field status (line 12) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Trains(int numCars, int numStations) {
	       ^
    (see http://t.uber.com/nullaway )
../original/url054c08669f_jules2689_CSI4124_tgz-pJ8-SMThemeParkExperi3J8/src/simModel/TravellingBetweenStations.java:11: error: [NullAway] initializer method does not guarantee @NonNull field train (line 9) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public TravellingBetweenStations(SMThemePark model, int id) {
	       ^
    (see http://t.uber.com/nullaway )
5 errors
